# story-labeling-api

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  pyproject.toml
app/: clustering.py  config.py  labeling.py  main.py  schemas.py  service.py  vector_store.py
tests/: test_clustering.py  test_labeling.py  test_main.py  test_service.py  test_vector_store.py
